--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "request": "^2.88.0",
+    "request-promise": "^4.2.5",
     "webpack": "^4.41.2"
   }
 }
